--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 # sdk.dir=C:\\Program Files (x86)\\Android\\android-sdk
-D:\adt-bundle-windows-x86_64-20140702\sdk
+#D:\adt-bundle-windows-x86_64-20140702\sdk
